// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> Should hide app store badges when on /download page 1`] = `
<div
  className="u-backgroundPrimaryDarkBlue u-flexNone"
>
  <div
    className="Container"
  >
    <div
      className="u-md-flex u-lg-flex u-flexRow u-spaceMT5 u-spaceMB7"
    >
      <div
        className="u-flexGrow1"
      >
        <nav
          className="Grid"
        >
          <div
            className="u-md-size1of2 u-lg-size1of2 u-maxWidth1of3"
          >
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/about-us"
            >
              Om oss
            </GatsbyLink>
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/faq"
            >
              Vanliga frågor
            </GatsbyLink>
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/legal"
            >
              Legal information
            </GatsbyLink>
          </div>
          <div
            className="u-md-size1of2 u-lg-size1of2 u-maxWidth1of3"
          >
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/contact"
            >
              Kontakt
            </GatsbyLink>
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/press"
            >
              Press
            </GatsbyLink>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Footer /> Should render correctly with app store downloads 1`] = `
<div
  className="u-backgroundPrimaryDarkBlue u-flexNone"
>
  <div
    className="Container"
  >
    <div
      className="u-md-flex u-lg-flex u-flexRow u-spaceMT5 u-spaceMB7"
    >
      <div
        className="u-flexGrow1"
      >
        <nav
          className="Grid"
        >
          <div
            className="u-md-size1of2 u-lg-size1of2 u-maxWidth1of3"
          >
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/about-us"
            >
              Om oss
            </GatsbyLink>
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/faq"
            >
              Vanliga frågor
            </GatsbyLink>
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/legal"
            >
              Legal information
            </GatsbyLink>
          </div>
          <div
            className="u-md-size1of2 u-lg-size1of2 u-maxWidth1of3"
          >
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/contact"
            >
              Kontakt
            </GatsbyLink>
            <GatsbyLink
              className="u-spaceMB9 u-linkBlock u-lg-fontSize9 u-colorWhite"
              to="/press"
            >
              Press
            </GatsbyLink>
          </div>
        </nav>
      </div>
      <div
        className="u-md-textRight u-lg-textRight"
      >
        <a
          className="u-block u-spaceMB11"
          href="https://itunes.apple.com/se/app/hedvig/id1303668531?mt=8"
          id="cta-footer-download-apple-store"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Ladda ner på App Store"
            height={54}
            src="/assets/appstores/app-store-badge@2x.png"
          />
        </a>
        <a
          className="u-block u-spaceMB11"
          href="https://play.google.com/store/apps/details?id=com.hedvig.app"
          id="cta-footer-download-play-store"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Ladda ner på Google Play"
            height={54}
            src="/assets/appstores/google-play-badge@2x.png"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
